--- a/index.html
+++ b/index.html
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Stopwatch 2019 - Macmillan Cancer Support</title>
-<link rel="stylesheet" media="screen" href="_css/fonts.css">
-<link rel="stylesheet" media="screen" href="_css/stopwatch.css">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Stopwatch 2019 - Macmillan Cancer Support</title>
+    <link rel="stylesheet" media="screen" href="_css/fonts.css">
+    <link rel="stylesheet" media="screen" href="_css/stopwatch.css">
 </head>
 <body>
 <div class="header">
-	<div class="container">
-		<img src="_img/macmillan-logo.png" alt="macmillan logo" />
-	</div>
+    <div class="container">
+        <img src="_img/macmillan-logo.png" alt="macmillan logo"/>
+    </div>
 </div>
 
 
 <div class="container">
-	<h1>stopwatch</h1>
-	
+    <h1>stopwatch</h1>
+
     <h2>
-    	<span class="hours">00</span>
-        <span class="colon">:</span>
-        <span class="minutes">00</span>
-        <span class="colon">:</span>
-        <span class="seconds">00</span>
-	</h2>
-	
-	
-    <button id="startPause" type="button" class="btn-start">Start</button>
-    <button type="button" class="btn-stop">Stop</button>
-    <button type="button" class="btn-reset">Reset</button>
+        <time>00:00:00</time>
+    </h2>
+
+    <button onclick="start()" type="button" class="btn-start">Start</button>
+    <button onclick="stop()" type="button" class="btn-stop">Stop</button>
+    <button onclick="reset()" type="button" class="btn-reset">Reset</button>
 </div>
 <script src="_scripts/stopwatch.js" type="text/javascript"></script>
 </body>
